--- a/devs.html
+++ b/devs.html
@@ -380,42 +380,29 @@
     </header>
 
     <section class="hero">
-        <h1>Contact & Support</h1>
-        <p>We're here to help you with CoreForge. Reach out to the right department below, and our team will respond as
-            soon as possible.</p>
+        <h1>CoreForge Developers</h1>
+        <p>We made and built CoreForge with passion and precision from the ground up.</p>
     </section>
 
     <section class="contact-section" id="support">
         <div class="grid">
 
             <div class="contact-card">
-                <h3>⚙️ Bot Support</h3>
-                <p>Technical help, errors, configuration, or general CoreForge support.</p>
-                <a href="mailto:support@coreforge.dev">Email: support@coreforge.dev</a>
-            </div>
-
-            <div class="contact-card">
-                <h3>💳 Billing Support</h3>
-                <p>Purchases, subscriptions, invoices, refunds, and billing concerns.</p>
-                <a href="mailto:store@coreforge.dev">Email: store@coreforge.dev</a>
-            </div>
-
-            <div class="contact-card">
-                <h3>🧪 Zombie Clanx</h3>
-                <p>Direct contact for the Zombie Clanx dev relations & support.</p>
+                <h3>🧪 Zombie clanx</h3>
+                <p>Direct contact for the Zombie clanx dev relations & support.</p>
                 <a href="mailto:zombie.clanx@coreforge.dev">Email: zombie.clanx@coreforge.dev</a>
-            </div>
-
-            <div class="contact-card">
-                <h3>💬 Discord Community</h3>
-                <p>Live support, announcements, updates, and community help.</p>
-                <a href="https://discord.gg/coreforge" target="_blank">Join Discord Server</a>
             </div>
 
             <div class="contact-card">
                 <h3>✨ Jereme - Web Developer</h3>
                 <p>Hello im the developer of this website. Contact me below.</p>
                 <a href="https://discord.com/users/977438421515644948" target="_blank">Contact Me</a>
+            </div>
+
+            <div class="contact-card">
+                <h3>♻️ Ayansh - Bot Developer</h3>
+                <p>Hello i helped Zombie clanx with bot development.</p>
+                <a href="https://discord.com/users/1421877908456083578" target="_blank">Contact Me</a>
             </div>
 
         </div>
