--- a/support-commands.html
+++ b/support-commands.html
@@ -97,7 +97,7 @@ li{margin-bottom:6px}
   <section class="card">
 <h2>Support Commands</h2>
 <p>support tickets</p>
-<p>support ticket config</p>
+<p>support ticket-config</p>
     
   </section>
 </main>
