--- a/index.html
+++ b/index.html
@@ -645,8 +645,8 @@
                 </div>
                 <div>
                     <h4>Company</h4>
-                    <a href="#vision">About</a>
-                    <a href="developers.html">Developers</a>
+                    <a href="partners.html">Partners</a>
+                    <a href="devs.html">Developers</a>
                     <a href="privacy.html">Privacy Policy</a>
                     <a href="tos.html">Terms of Service</a>
                 </div>
