Add favicon and logo to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoreForge - Home</title>
+    <link rel="icon" type="image/png" href="logo.png" />
+    <link rel="apple-touch-icon" href="logo.png" />
+    <link rel="shortcut icon" href="logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -502,6 +505,9 @@
 
 <body>
     <header class="navbar">
+            <div class="brand-mark">
+                <img src="/S.png" alt="Logo">
+            </div>
         <div class="logo">Core<span>Forge</span></div>
         <nav>
             <a href="index.html">Home</a>
