--- a/index.html
+++ b/index.html
@@ -505,10 +505,8 @@
 
 <body>
     <header class="navbar">
-            <div class="brand-mark">
-                <img src="/S.png" alt="Logo">
-            </div>
-        <div class="logo">Core<span>Forge</span></div>
+                <div><img src="/S.png" alt="Logo">
+        <class="logo">Core<span>Forge</span>
         <nav>
             <a href="index.html">Home</a>
             <a href="commands.html">Commands</a>
