Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
 <body>
     <header class="navbar">
-                <div><img src="/S.png" alt="Logo">
+                <div><img src="/logo.png" alt="Logo">
         <class="logo">Core<span>Forge</span>
         <nav>
             <a href="index.html">Home</a>
