Fix logo structure in header of index.html

--- a/index.html
+++ b/index.html
@@ -505,8 +505,10 @@
 
 <body>
     <header class="navbar">
-                <div><img src="/logo.png" alt="Logo">
-        <class="logo">Core<span>Forge</span>
+                <div>
+                    <img src="/logo.png" alt="Logo">
+                    <div class="logo">Core<span>Forge</span>
+                </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="commands.html">Commands</a>
