Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -507,6 +507,7 @@
     <header class="navbar">
                 <div>
                     <img src="/logo.png" alt="Logo">
+                </div>
                     <div class="logo">Core<span>Forge</span>
                 </div>
         <nav>
