--- a/index.html
+++ b/index.html
@@ -505,11 +505,7 @@
 
 <body>
     <header class="navbar">
-                <div>
-                    <img src="/logo.png" alt="Logo">
-                </div>
-                    <div class="logo">Core<span>Forge</span>
-                </div>
+                    <div class="logo">Core<span>Forge</span> <img src="/logo.png" alt="Logo"> </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="commands.html">Commands</a>
