--- a/index.html
+++ b/index.html
@@ -505,8 +505,14 @@
 
 <body>
     <header class="navbar">
-                    <div class="logo">Core<span>Forge</span> <img src="/logo.png" alt="Logo"> </div>
-        <nav>
+      <div class="brand">
+        <div class="brand-image">
+           <img src="/logo.png" alt="Logo">
+        </div>
+         <div class="brand-text">
+             <div></div>Core<span>Forge</span></div>
+        </div>
+          <nav>
             <a href="index.html">Home</a>
             <a href="commands.html">Commands</a>
             <a href="https://discord.gg/coreforge">Join Server</a>
