--- a/index.html
+++ b/index.html
@@ -504,14 +504,18 @@
 </head>
 
 <body>
-    <header class="navbar">
-      <div class="brand">
-        <div class="brand-image">
-           <img src="/logo.png" alt="Logo">
-        </div>
-         <div class="brand-text">
-             <div></div>Core<span>Forge</span></div>
-        </div>
+    <header>
+        <div class="nav-inner">
+            <div class="brand">
+                <div class="brand-mark">
+                    <img src="/logo.png" alt="Logo">
+                </div>
+                <div class="brand-text">
+                    <div class="brand-title">Core<span>Forge</span> Development</div>
+                    <div class="brand-sub"><span>Discord Systems & Hosting</span></div>
+                </div>
+            </div>
+
           <nav>
             <a href="index.html">Home</a>
             <a href="commands.html">Commands</a>
