--- a/index.html
+++ b/index.html
@@ -500,6 +500,52 @@
                 text-align: center
             }
         }
+
+        @media (max-width: 900px) {
+            .footer-container {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 50px;
+            }
+
+            .footer-links {
+                gap: 60px;
+            }
+        }
+
+        @media (max-width: 640px) {
+
+            .footer-container,
+            .footer-bottom {
+                text-align: center;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .footer-links {
+                flex-direction: column;
+                gap: 40px;
+            }
+
+            .footer-brand h3 {
+                justify-content: center;
+            }
+
+            .footer-brand p {
+                text-align: center;
+                margin: 0 auto;
+            }
+        }
+
+        @media (max-width: 640px) {
+            .footer-inner {
+                text-align: center;
+            }
+
+            .social-icons {
+                justify-content: center;
+            }
+        }
     </style>
 </head>
 
