--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoreForge - Home</title>
-    <link rel="icon" type="image/png" href="logo.png" />
-    <link rel="apple-touch-icon" href="logo.png" />
-    <link rel="shortcut icon" href="logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -500,75 +497,19 @@
                 text-align: center
             }
         }
-
-        @media (max-width: 900px) {
-            .footer-container {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 50px;
-            }
-
-            .footer-links {
-                gap: 60px;
-            }
-        }
-
-        @media (max-width: 640px) {
-
-            .footer-container,
-            .footer-bottom {
-                text-align: center;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .footer-links {
-                flex-direction: column;
-                gap: 40px;
-            }
-
-            .footer-brand h3 {
-                justify-content: center;
-            }
-
-            .footer-brand p {
-                text-align: center;
-                margin: 0 auto;
-            }
-        }
-
-        @media (max-width: 640px) {
-            .footer-inner {
-                text-align: center;
-            }
-
-            .social-icons {
-                justify-content: center;
-            }
-        }
     </style>
 </head>
 
 <body>
-    <header>
-        <div class="nav-inner">
-            <div class="brand">
-                <div class="brand-mark">
-                    <img src="/logo.png" alt="Logo">
-                </div>
-                <div class="brand-text">
-                    <div class="brand-title">Core<span>Forge</span> Development</div>
-                    <div class="brand-sub"><span>Discord Systems & Hosting</span></div>
-                </div>
-            </div>
-
+    <header class="navbar">
+        <div class="logo">Core<span>Forge</span></div>
         <nav>
-        <a href="index.html" class="cta">Home</a>
-        <a href="commands.html" class="cta">Commands</a>
-        <a href="https://discord.gg/coreforge" class="cta">Join Server</a>
-        <a href="contact.html" class="cta">Contact</a>
-        <a href="https://discord.com/invite/corefore" class="cta">Add to Discord</a>
+            <a href="index.html">Home</a>
+            <a href="commands.html">Commands</a>
+            <a href="https://discord.gg/coreforge">Join Server</a>
+            <a href="contact.html">Contact</a>
         </nav>
+        <a href="https://discord.com/invite/corefore" class="cta">Add to Discord</a>
     </header>
 
     <section class="hero fade-up">
@@ -729,17 +670,5 @@
 
         </div>
     </footer>
-
-    <script>
-        const navbar = document.querySelector('.navbar');
-        window.addEventListener('scroll', () => { navbar.style.padding = window.scrollY > 50 ? '14px 8%' : '22px 8%'; navbar.style.background = window.scrollY > 50 ? 'rgba(0,0,0,0.8)' : 'rgba(0,0,0,0.6)' });
-        const observer = new IntersectionObserver(entries => { entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('visible') }) }, { threshold: 0.1 });
-        document.querySelectorAll('.fade-up').forEach(el => observer.observe(el));
-
-          document.getElementById("closePopup").addEventListener("click", () => {
-    document.getElementById("devPopup").style.display = "none";
-  });
-    </script>
-</body>
 
 </html>
