Update navigation links and add classes

--- a/index.html
+++ b/index.html
@@ -507,12 +507,12 @@
     <header class="navbar">
         <div class="logo">Core<span>Forge</span></div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="commands.html">Commands</a>
-            <a href="https://discord.gg/coreforge">Join Server</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html" class="cta">Home</a>
+            <a href="commands.html" class="cta">Commands</a>
+            <a href="https://discord.gg/coreforge" class="cta">Join Server</a>
+            <a href="contact.html" class="cta">Contact</a>
+            <a href="https://discord.com/invite/corefore" class="cta">Add to Discord</a>
         </nav>
-        <a href="https://discord.com/invite/corefore" class="cta">Add to Discord</a>
     </header>
 
     <section class="hero fade-up">
