--- a/premium.html
+++ b/premium.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CoreForge - Premium</title>
+    <title>CoreForge - API</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -512,8 +512,8 @@
     </header>
 
       <section class="hero fade-up">
-        <h1>CoreForge <span>Premium</span></h1>
-        <p>Sorry, this page is currently not able to be accessed.</p>
+        <h1>CoreForge - ERROR<span>.</span></h1>
+        <h2>Sorry, this page could not be found.</h2>
         <div class="hero-buttons">
             <a href="index.html" class="btn primary">Home Page</a>
         </div>
