Update footer links in index.html

--- a/index.html
+++ b/index.html
@@ -666,9 +666,9 @@
         <div class="footer-bottom">
             <p>© 2025 CoreForge. All rights reserved.</p>
             <p>Engineered with precision by
-                <a href="https://solvexs.xyz" target="_blank" class="link">Solvex Studios</a>
+                <a href="https://xynith.xyz" target="_blank" class="link">Xenith Development</a>
                 owner
-                <a href="https://discord.gg/FpXhZxRj" target="_blank" class="link">YK.JEREME</a>
+                <a href="https://discord.gg/bVRZHpFMMP" target="_blank" class="link">YK.JEREME</a>
             </p>
 
         </div>
